parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statement
Rule 3     statements -> statements statement
Rule 4     statement -> expression SEMI
Rule 5     statement -> LET ID COLON type ASSIGN expression SEMI
Rule 6     statement -> FUN ID COLON type ARROW type SEMI
Rule 7     statement -> LET ID ID ASSIGN expression SEMI
Rule 8     type -> TYPE_INT
Rule 9     type -> TYPE_BOOL
Rule 10    type -> LBRACK type RBRACK
Rule 11    expression -> expression PLUS expression
Rule 12    expression -> expression MINUS expression
Rule 13    expression -> expression TIMES expression
Rule 14    expression -> expression LT expression
Rule 15    expression -> expression GT expression
Rule 16    expression -> expression EQ expression
Rule 17    expression -> MINUS expression
Rule 18    expression -> LPAREN expression RPAREN
Rule 19    expression -> ID LPAREN expression RPAREN
Rule 20    expression -> NUMBER
Rule 21    expression -> TRUE
Rule 22    expression -> FALSE
Rule 23    expression -> ID
Rule 24    expression -> IF expression THEN expression ELSE expression
Rule 25    expression -> WHEN expression IS cases END
Rule 26    cases -> case
Rule 27    cases -> cases case
Rule 28    case -> patterns ARROW expression SEMI
Rule 29    patterns -> pattern
Rule 30    patterns -> patterns COMMA pattern
Rule 31    pattern -> NUMBER
Rule 32    pattern -> MINUS NUMBER
Rule 33    pattern -> TRUE
Rule 34    pattern -> FALSE
Rule 35    pattern -> UNDERSCORE
Rule 36    pattern -> LBRACK RBRACK
Rule 37    pattern -> ID COLON ID
Rule 38    expression -> LBRACK RBRACK
Rule 39    expression -> expression COLON expression

Terminals, with rules where they appear

ARROW                : 6 28
ASSIGN               : 5 7
COLON                : 5 6 37 39
COMMA                : 30
ELSE                 : 24
END                  : 25
EQ                   : 16
FALSE                : 22 34
FUN                  : 6
GT                   : 15
ID                   : 5 6 7 7 19 23 37 37
IF                   : 24
IS                   : 25
LBRACK               : 10 36 38
LET                  : 5 7
LPAREN               : 18 19
LT                   : 14
MINUS                : 12 17 32
NUMBER               : 20 31 32
PLUS                 : 11
RBRACK               : 10 36 38
RPAREN               : 18 19
SEMI                 : 4 5 6 7 28
THEN                 : 24
TIMES                : 13
TRUE                 : 21 33
TYPE_BOOL            : 9
TYPE_INT             : 8
UNDERSCORE           : 35
WHEN                 : 25
error                : 

Nonterminals, with rules where they appear

case                 : 26 27
cases                : 25 27
expression           : 4 5 7 11 11 12 12 13 13 14 14 15 15 16 16 17 18 19 24 24 24 25 28 39 39
pattern              : 29 30
patterns             : 28 30
program              : 0
statement            : 2 3
statements           : 1 3
type                 : 5 6 6 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statement
    (3) statements -> . statements statement
    (4) statement -> . expression SEMI
    (5) statement -> . LET ID COLON type ASSIGN expression SEMI
    (6) statement -> . FUN ID COLON type ARROW type SEMI
    (7) statement -> . LET ID ID ASSIGN expression SEMI
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression EQ expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . TRUE
    (22) expression -> . FALSE
    (23) expression -> . ID
    (24) expression -> . IF expression THEN expression ELSE expression
    (25) expression -> . WHEN expression IS cases END
    (38) expression -> . LBRACK RBRACK
    (39) expression -> . expression COLON expression

    LET             shift and go to state 5
    FUN             shift and go to state 7
    MINUS           shift and go to state 8
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    NUMBER          shift and go to state 10
    TRUE            shift and go to state 11
    FALSE           shift and go to state 12
    IF              shift and go to state 13
    WHEN            shift and go to state 14
    LBRACK          shift and go to state 15

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (3) statements -> statements . statement
    (4) statement -> . expression SEMI
    (5) statement -> . LET ID COLON type ASSIGN expression SEMI
    (6) statement -> . FUN ID COLON type ARROW type SEMI
    (7) statement -> . LET ID ID ASSIGN expression SEMI
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression EQ expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . TRUE
    (22) expression -> . FALSE
    (23) expression -> . ID
    (24) expression -> . IF expression THEN expression ELSE expression
    (25) expression -> . WHEN expression IS cases END
    (38) expression -> . LBRACK RBRACK
    (39) expression -> . expression COLON expression

    $end            reduce using rule 1 (program -> statements .)
    LET             shift and go to state 5
    FUN             shift and go to state 7
    MINUS           shift and go to state 8
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    NUMBER          shift and go to state 10
    TRUE            shift and go to state 11
    FALSE           shift and go to state 12
    IF              shift and go to state 13
    WHEN            shift and go to state 14
    LBRACK          shift and go to state 15

    statement                      shift and go to state 16
    expression                     shift and go to state 4

state 3

    (2) statements -> statement .

    LET             reduce using rule 2 (statements -> statement .)
    FUN             reduce using rule 2 (statements -> statement .)
    MINUS           reduce using rule 2 (statements -> statement .)
    LPAREN          reduce using rule 2 (statements -> statement .)
    ID              reduce using rule 2 (statements -> statement .)
    NUMBER          reduce using rule 2 (statements -> statement .)
    TRUE            reduce using rule 2 (statements -> statement .)
    FALSE           reduce using rule 2 (statements -> statement .)
    IF              reduce using rule 2 (statements -> statement .)
    WHEN            reduce using rule 2 (statements -> statement .)
    LBRACK          reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)


state 4

    (4) statement -> expression . SEMI
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (14) expression -> expression . LT expression
    (15) expression -> expression . GT expression
    (16) expression -> expression . EQ expression
    (39) expression -> expression . COLON expression

    SEMI            shift and go to state 17
    PLUS            shift and go to state 18
    MINUS           shift and go to state 19
    TIMES           shift and go to state 20
    LT              shift and go to state 21
    GT              shift and go to state 22
    EQ              shift and go to state 23
    COLON           shift and go to state 24


state 5

    (5) statement -> LET . ID COLON type ASSIGN expression SEMI
    (7) statement -> LET . ID ID ASSIGN expression SEMI

    ID              shift and go to state 25


state 6

    (19) expression -> ID . LPAREN expression RPAREN
    (23) expression -> ID .

    LPAREN          shift and go to state 26
    SEMI            reduce using rule 23 (expression -> ID .)
    PLUS            reduce using rule 23 (expression -> ID .)
    MINUS           reduce using rule 23 (expression -> ID .)
    TIMES           reduce using rule 23 (expression -> ID .)
    LT              reduce using rule 23 (expression -> ID .)
    GT              reduce using rule 23 (expression -> ID .)
    EQ              reduce using rule 23 (expression -> ID .)
    COLON           reduce using rule 23 (expression -> ID .)
    RPAREN          reduce using rule 23 (expression -> ID .)
    THEN            reduce using rule 23 (expression -> ID .)
    IS              reduce using rule 23 (expression -> ID .)
    ELSE            reduce using rule 23 (expression -> ID .)


state 7

    (6) statement -> FUN . ID COLON type ARROW type SEMI

    ID              shift and go to state 27


state 8

    (17) expression -> MINUS . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression EQ expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . TRUE
    (22) expression -> . FALSE
    (23) expression -> . ID
    (24) expression -> . IF expression THEN expression ELSE expression
    (25) expression -> . WHEN expression IS cases END
    (38) expression -> . LBRACK RBRACK
    (39) expression -> . expression COLON expression

    MINUS           shift and go to state 8
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    NUMBER          shift and go to state 10
    TRUE            shift and go to state 11
    FALSE           shift and go to state 12
    IF              shift and go to state 13
    WHEN            shift and go to state 14
    LBRACK          shift and go to state 15

    expression                     shift and go to state 28

state 9

    (18) expression -> LPAREN . expression RPAREN
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression EQ expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . TRUE
    (22) expression -> . FALSE
    (23) expression -> . ID
    (24) expression -> . IF expression THEN expression ELSE expression
    (25) expression -> . WHEN expression IS cases END
    (38) expression -> . LBRACK RBRACK
    (39) expression -> . expression COLON expression

    MINUS           shift and go to state 8
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    NUMBER          shift and go to state 10
    TRUE            shift and go to state 11
    FALSE           shift and go to state 12
    IF              shift and go to state 13
    WHEN            shift and go to state 14
    LBRACK          shift and go to state 15

    expression                     shift and go to state 29

state 10

    (20) expression -> NUMBER .

    SEMI            reduce using rule 20 (expression -> NUMBER .)
    PLUS            reduce using rule 20 (expression -> NUMBER .)
    MINUS           reduce using rule 20 (expression -> NUMBER .)
    TIMES           reduce using rule 20 (expression -> NUMBER .)
    LT              reduce using rule 20 (expression -> NUMBER .)
    GT              reduce using rule 20 (expression -> NUMBER .)
    EQ              reduce using rule 20 (expression -> NUMBER .)
    COLON           reduce using rule 20 (expression -> NUMBER .)
    RPAREN          reduce using rule 20 (expression -> NUMBER .)
    THEN            reduce using rule 20 (expression -> NUMBER .)
    IS              reduce using rule 20 (expression -> NUMBER .)
    ELSE            reduce using rule 20 (expression -> NUMBER .)


state 11

    (21) expression -> TRUE .

    SEMI            reduce using rule 21 (expression -> TRUE .)
    PLUS            reduce using rule 21 (expression -> TRUE .)
    MINUS           reduce using rule 21 (expression -> TRUE .)
    TIMES           reduce using rule 21 (expression -> TRUE .)
    LT              reduce using rule 21 (expression -> TRUE .)
    GT              reduce using rule 21 (expression -> TRUE .)
    EQ              reduce using rule 21 (expression -> TRUE .)
    COLON           reduce using rule 21 (expression -> TRUE .)
    RPAREN          reduce using rule 21 (expression -> TRUE .)
    THEN            reduce using rule 21 (expression -> TRUE .)
    IS              reduce using rule 21 (expression -> TRUE .)
    ELSE            reduce using rule 21 (expression -> TRUE .)


state 12

    (22) expression -> FALSE .

    SEMI            reduce using rule 22 (expression -> FALSE .)
    PLUS            reduce using rule 22 (expression -> FALSE .)
    MINUS           reduce using rule 22 (expression -> FALSE .)
    TIMES           reduce using rule 22 (expression -> FALSE .)
    LT              reduce using rule 22 (expression -> FALSE .)
    GT              reduce using rule 22 (expression -> FALSE .)
    EQ              reduce using rule 22 (expression -> FALSE .)
    COLON           reduce using rule 22 (expression -> FALSE .)
    RPAREN          reduce using rule 22 (expression -> FALSE .)
    THEN            reduce using rule 22 (expression -> FALSE .)
    IS              reduce using rule 22 (expression -> FALSE .)
    ELSE            reduce using rule 22 (expression -> FALSE .)


state 13

    (24) expression -> IF . expression THEN expression ELSE expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression EQ expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . TRUE
    (22) expression -> . FALSE
    (23) expression -> . ID
    (24) expression -> . IF expression THEN expression ELSE expression
    (25) expression -> . WHEN expression IS cases END
    (38) expression -> . LBRACK RBRACK
    (39) expression -> . expression COLON expression

    MINUS           shift and go to state 8
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    NUMBER          shift and go to state 10
    TRUE            shift and go to state 11
    FALSE           shift and go to state 12
    IF              shift and go to state 13
    WHEN            shift and go to state 14
    LBRACK          shift and go to state 15

    expression                     shift and go to state 30

state 14

    (25) expression -> WHEN . expression IS cases END
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression EQ expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . TRUE
    (22) expression -> . FALSE
    (23) expression -> . ID
    (24) expression -> . IF expression THEN expression ELSE expression
    (25) expression -> . WHEN expression IS cases END
    (38) expression -> . LBRACK RBRACK
    (39) expression -> . expression COLON expression

    MINUS           shift and go to state 8
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    NUMBER          shift and go to state 10
    TRUE            shift and go to state 11
    FALSE           shift and go to state 12
    IF              shift and go to state 13
    WHEN            shift and go to state 14
    LBRACK          shift and go to state 15

    expression                     shift and go to state 31

state 15

    (38) expression -> LBRACK . RBRACK

    RBRACK          shift and go to state 32


state 16

    (3) statements -> statements statement .

    LET             reduce using rule 3 (statements -> statements statement .)
    FUN             reduce using rule 3 (statements -> statements statement .)
    MINUS           reduce using rule 3 (statements -> statements statement .)
    LPAREN          reduce using rule 3 (statements -> statements statement .)
    ID              reduce using rule 3 (statements -> statements statement .)
    NUMBER          reduce using rule 3 (statements -> statements statement .)
    TRUE            reduce using rule 3 (statements -> statements statement .)
    FALSE           reduce using rule 3 (statements -> statements statement .)
    IF              reduce using rule 3 (statements -> statements statement .)
    WHEN            reduce using rule 3 (statements -> statements statement .)
    LBRACK          reduce using rule 3 (statements -> statements statement .)
    $end            reduce using rule 3 (statements -> statements statement .)


state 17

    (4) statement -> expression SEMI .

    LET             reduce using rule 4 (statement -> expression SEMI .)
    FUN             reduce using rule 4 (statement -> expression SEMI .)
    MINUS           reduce using rule 4 (statement -> expression SEMI .)
    LPAREN          reduce using rule 4 (statement -> expression SEMI .)
    ID              reduce using rule 4 (statement -> expression SEMI .)
    NUMBER          reduce using rule 4 (statement -> expression SEMI .)
    TRUE            reduce using rule 4 (statement -> expression SEMI .)
    FALSE           reduce using rule 4 (statement -> expression SEMI .)
    IF              reduce using rule 4 (statement -> expression SEMI .)
    WHEN            reduce using rule 4 (statement -> expression SEMI .)
    LBRACK          reduce using rule 4 (statement -> expression SEMI .)
    $end            reduce using rule 4 (statement -> expression SEMI .)


state 18

    (11) expression -> expression PLUS . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression EQ expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . TRUE
    (22) expression -> . FALSE
    (23) expression -> . ID
    (24) expression -> . IF expression THEN expression ELSE expression
    (25) expression -> . WHEN expression IS cases END
    (38) expression -> . LBRACK RBRACK
    (39) expression -> . expression COLON expression

    MINUS           shift and go to state 8
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    NUMBER          shift and go to state 10
    TRUE            shift and go to state 11
    FALSE           shift and go to state 12
    IF              shift and go to state 13
    WHEN            shift and go to state 14
    LBRACK          shift and go to state 15

    expression                     shift and go to state 33

state 19

    (12) expression -> expression MINUS . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression EQ expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . TRUE
    (22) expression -> . FALSE
    (23) expression -> . ID
    (24) expression -> . IF expression THEN expression ELSE expression
    (25) expression -> . WHEN expression IS cases END
    (38) expression -> . LBRACK RBRACK
    (39) expression -> . expression COLON expression

    MINUS           shift and go to state 8
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    NUMBER          shift and go to state 10
    TRUE            shift and go to state 11
    FALSE           shift and go to state 12
    IF              shift and go to state 13
    WHEN            shift and go to state 14
    LBRACK          shift and go to state 15

    expression                     shift and go to state 34

state 20

    (13) expression -> expression TIMES . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression EQ expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . TRUE
    (22) expression -> . FALSE
    (23) expression -> . ID
    (24) expression -> . IF expression THEN expression ELSE expression
    (25) expression -> . WHEN expression IS cases END
    (38) expression -> . LBRACK RBRACK
    (39) expression -> . expression COLON expression

    MINUS           shift and go to state 8
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    NUMBER          shift and go to state 10
    TRUE            shift and go to state 11
    FALSE           shift and go to state 12
    IF              shift and go to state 13
    WHEN            shift and go to state 14
    LBRACK          shift and go to state 15

    expression                     shift and go to state 35

state 21

    (14) expression -> expression LT . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression EQ expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . TRUE
    (22) expression -> . FALSE
    (23) expression -> . ID
    (24) expression -> . IF expression THEN expression ELSE expression
    (25) expression -> . WHEN expression IS cases END
    (38) expression -> . LBRACK RBRACK
    (39) expression -> . expression COLON expression

    MINUS           shift and go to state 8
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    NUMBER          shift and go to state 10
    TRUE            shift and go to state 11
    FALSE           shift and go to state 12
    IF              shift and go to state 13
    WHEN            shift and go to state 14
    LBRACK          shift and go to state 15

    expression                     shift and go to state 36

state 22

    (15) expression -> expression GT . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression EQ expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . TRUE
    (22) expression -> . FALSE
    (23) expression -> . ID
    (24) expression -> . IF expression THEN expression ELSE expression
    (25) expression -> . WHEN expression IS cases END
    (38) expression -> . LBRACK RBRACK
    (39) expression -> . expression COLON expression

